k8s/deploy-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    release: nginx
spec:
  selector:
    matchLabels:
      release: nginx
  replicas: 1
  template:
    metadata:
      labels:
        release: nginx
    spec:
      containers:
        - name: foobar
          image: reg.istry.cz/foobar
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            periodSeconds: 10
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 20m
              memory: 20Mi
