k8s/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
    - port: 8081
      name: dev-http
      protocol: TCP
      targetPort: http
  selector:
    release: nginx
