k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: skaffold-demo
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
    - port: 8080
      name: dev-http
      protocol: TCP
      targetPort: http
  selector:
    release: skaffold-demo
