k8s/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skaffold-demo
spec:
  rules:
    - host: skaff.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skaffold-demo
                port:
                  number: 80
